--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,8 @@
 
-@import url('https://fonts.googleapis.com/css?family=PT+Sans&display=swap');
 
 body, html{
 
-    background-image: url(images/main.jpg);
+    background-image: url(/gyrab/images/main.jpg);
     background-position: top;
     background-attachment: fixed;
     background-size: cover;
@@ -15,7 +14,7 @@ body, html{
 .headline{
 
     font-size: calc(50px + 5vw);
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Josefin Sans', serif;
     text-align: center;
     margin-top: 10vh;
     transition: all 0.5s;
@@ -32,7 +31,7 @@ body, html{
     font-size: calc(25px + 1vw);
     cursor: pointer;
     transform: translate(-50%, -50%);
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Josefin Sans', serif;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -67,15 +66,15 @@ body, html{
 .infocontainer{
     width: 100%;
     position: absolute;
-    top: 55vh;
+    top: 20vh;
     text-align: center;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Josefin Sans', serif;
     transition: all 0.5s;
 }
 
 .infoChild{
-    width: 300px;
-    height: 250px;
+    width: 640px;
+    height: 983px;
     display: inline-block;
     background: rgba(255, 255, 255, 0.9);
     margin: 5vw;
@@ -110,7 +109,7 @@ body, html{
     position: absolute;
     top: 55vh;
     text-align: center;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Josefin Sans', serif;
     transition: all 0.5s;
 }
 
@@ -190,7 +189,7 @@ body, html{
 }
 .storetoolbarhidden {
 
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Josefin Sans', serif;
 
     display: none;
     position: relative;
@@ -222,6 +221,34 @@ body, html{
 
 }
 /* end store*/
+
+/*preloader*/
+
+.preloader {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.preloader.hidden {
+    animation: prefade 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes prefade {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+/*preloader end*/
 
 /* copy paste from https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting */
 .noselect {
