--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 
 body, html{
 
-    background-image: url(/gyrab/images/main.jpg);
+    background-image: url(/images/main.jpg);
     background-position: top;
     background-attachment: fixed;
     background-size: cover;
